Dark Mode Bug Fixed

--- a/src/App.css
+++ b/src/App.css
@@ -206,3 +206,23 @@ input[type="checkbox"] {
   width: 100%;
   background: #4caf50;
 }
+
+
+@media (prefers-color-scheme: dark) {
+  .textx {
+    color: #111;
+  }
+   .head1{
+    color: #242424;
+   }
+   .password-box{
+    background-color: #242424;
+   }
+
+   .erdemlabel{
+    color: whitesmoke;
+   }
+   .checkbox-label{
+    color: #242424;
+   }
+}
